Ampliar el ancho de los videos de los cursos para una mejor visualización en los celulares, Jesus Cacha

--- a/web/assets/css/styleprogreso.css
+++ b/web/assets/css/styleprogreso.css
@@ -71,15 +71,17 @@
     
 }
 
+/*
 .vid iframe{
     margin: 10px;
     width: 97%;
     height: 24rem;
     border-radius: 10px;
 }
+*/
 
 
-
+/*
 @media screen and (max-width: 1600px) {
     .vid iframe{
         margin: 10px;
@@ -89,3 +91,4 @@
     }
 
 }
+*/
