Modificar el diseño de las páginas para agregar nuevo curso, editar curso, agregar modulos, agregar temas, agregar preguntas y agregar respuestas, Jesus Cacha

--- a/web/assets/css/agrecursos.css
+++ b/web/assets/css/agrecursos.css
@@ -438,9 +438,9 @@ form {
 }
 
 .btn-agregar {
-    background: #4F52D6;
-    color: white;
-    border: 1px solid #4F52D6;
+    background: white;
+    color: #4F52D6;
+    border: 2px solid #4F52D6 !important;
 }
 
 .btn-agregar:hover {
