--- a/web/assets/css/formPagarVisa.css
+++ b/web/assets/css/formPagarVisa.css
@@ -1,6 +1,45 @@
+.modal { 
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 1rem;
+	background: var(--black);
+	cursor: pointer;
+	visibility: hidden;
+	opacity: 0;
+	transition: all 0.35s ease-in;
+  }
+
+.modal-dialog {
+	position: relative;
+	max-width: 800px;
+	max-height: 80vh;
+	border-radius: 5px;
+	background: var(--white);
+	overflow: auto;
+	cursor: default;
+}
+
+.modal-content {
+
+	background: #ddeefc; 
+	border: 2px solid black; 
+	border-radius: 30px; 
+	width: 850px; 
+	height: 1000px; 
+	overflow-y: scroll;
+	position: relative;
+	top: 70px;
+}
+
 .contenedor {
-	width: 90%;
-	max-width: 1000px;
+	width: 850px;
+	max-width: 2000px;
 	padding: 40px 20px;
 	margin: auto;
 	display: flex;
@@ -10,9 +49,11 @@
 
 /* ---------- Estilos Generales de las Tarjetas ----------*/
 .tarjeta {
+	font-family: 'Lato', sans-serif;
 	width: 100%;
 	max-width: 550px;
 	position: relative;
+	top: 30px;
 	color: #fff;
 	transition: .3s ease all;
 	transform: rotateY(0deg);
@@ -156,10 +197,9 @@
 	height: 50px;
 	font-size: 20px;
 	line-height: 20px;
-	background: #2364d2;
+	background: #5c5dc4;
 	color: #fff;
 	position: relative;
-	top: -25px;
 	z-index: 3;
 	border-radius: 100%;
 	box-shadow: -5px 4px 8px rgba(24,56,182,0.4);
@@ -181,6 +221,7 @@
 .formulario-tarjeta {
 	background: #fff;
 	width: 100%;
+	height: 600px;
 	max-width: 700px;
 	padding: 150px 30px 30px 30px;
 	border-radius: 10px;
@@ -270,11 +311,130 @@
 	padding: 10px;
 	font-size: 22px;
 	color: #fff;
-	background: #2364d2;
+	background: #5c5dc4;
 	box-shadow: 2px 2px 10px 0px rgba(0,85,212,0.4);
 	cursor: pointer;
 }
 
 .formulario-tarjeta .btn-enviar:hover {
-	background: #1850b1;
+	background: #2b2c5c;
+}
+
+.btnCancelar {
+	border: 2px solid #CED6E0;
+	font-size: 18px;
+	height: 50px;
+	width: 100%;
+	padding: 5px 12px;
+	transition: .3s ease all;
+	border-radius: 5px;
+	position: relative;
+	top: 10px;
+	background: red;
+	color: white;
+	border: none;
+	padding: 10px;
+	font-size: 22px;
+	box-shadow: 2px 2px 10px 0px rgba(0,85,212,0.4);
+	cursor: pointer;
+}
+
+.btnCancelar:hover {
+	background: rgb(126, 38, 38);
+}
+
+/*Esto significa que cuando el ancho de la pantalla supere los 850px, se aplicarán los siguientes estilos.*/
+@media (max-width: 850px){
+
+	.modal {
+
+	 
+	}
+	
+	.modal-content {
+	
+		position: relative;
+		top: 50px;
+	}
+
+    .contenedor {
+		width: 110%;
+		max-width: 1000px;
+		padding: 40px 20px;
+		margin: auto;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.tarjeta {
+		width: 100%;
+		max-width: 550px;
+		position: relative;
+		color: #fff;
+		transition: .3s ease all;
+		transform: rotateY(0deg);
+		transform-style: preserve-3d;
+		cursor: pointer;
+		z-index: 2;
+	}
+
+	.formulario-tarjeta {
+		background: #fff;
+		width: 110%;
+		max-width: 700px;
+		padding: 150px 30px 30px 30px;
+		border-radius: 10px;
+		position: relative;
+		top: -150px;
+		z-index: 1;
+		clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+		transition: clip-path .3s ease-out;
+	}
+
+	.tarjeta {
+		width: 100%;
+		max-width: 550px;
+		position: relative;
+		left: -17px;
+		color: #fff;
+		transition: .3s ease all;
+		transform: rotateY(0deg);
+		transform-style: preserve-3d;
+		cursor: pointer;
+		z-index: 2;
+	}
+
+	.contenedor-btn .btn-abrir-formulario {
+		width: 50px;
+		height: 50px;
+		font-size: 20px;
+		line-height: 20px;
+		background: #5c5dc4;
+		color: #fff;
+		position: relative;
+		left: -17px;
+		z-index: 3;
+		border-radius: 100%;
+		box-shadow: -5px 4px 8px rgba(24,56,182,0.4);
+		padding: 5px;
+		transition: all .2s ease;
+		border: none;
+		cursor: pointer;
+	}
+
+	.formulario-tarjeta {
+		background: #fff;
+		width: 100%;
+		max-width: 700px;
+		padding: 150px 30px 30px 30px;
+		border-radius: 10px;
+		position: relative;
+		left: -18px;
+		top: -150px;
+		z-index: 1;
+		clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+		transition: clip-path .3s ease-out;
+	}
+	
 }
