--- a/web/assets/css/formPagarVisa.css
+++ b/web/assets/css/formPagarVisa.css
@@ -219,6 +219,7 @@
 
 /* ---------- Formulario Tarjeta ----------*/
 .formulario-tarjeta {
+	font-family: 'Lato', sans-serif;
 	background: #fff;
 	width: 100%;
 	height: 600px;
@@ -367,34 +368,11 @@
 		align-items: center;
 	}
 
+	/* ---------- Estilos Generales de las Tarjetas ----------*/
 	.tarjeta {
+		font-family: 'Lato', sans-serif;
 		width: 100%;
-		max-width: 550px;
-		position: relative;
-		color: #fff;
-		transition: .3s ease all;
-		transform: rotateY(0deg);
-		transform-style: preserve-3d;
-		cursor: pointer;
-		z-index: 2;
-	}
-
-	.formulario-tarjeta {
-		background: #fff;
-		width: 110%;
-		max-width: 700px;
-		padding: 150px 30px 30px 30px;
-		border-radius: 10px;
-		position: relative;
-		top: -150px;
-		z-index: 1;
-		clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
-		transition: clip-path .3s ease-out;
-	}
-
-	.tarjeta {
-		width: 100%;
-		max-width: 550px;
+		/*max-width: 550px;*/
 		position: relative;
 		left: -17px;
 		color: #fff;
@@ -404,6 +382,161 @@
 		cursor: pointer;
 		z-index: 2;
 	}
+
+	.tarjeta.active {
+		transform: rotateY(180deg);
+	}
+
+	.tarjeta > div {
+		padding: 30px;
+		border-radius: 15px;
+		min-height: 315px;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		box-shadow: 0 10px 10px 0 rgba(90,116,148,0.3);
+	}
+
+	/* ---------- Tarjeta Delantera ----------*/
+
+	.tarjeta .delantera {
+		width: 100%;
+		background: url(../img/bg-tarjeta/bg-tarjeta-02.jpg);
+		background-size: cover;
+	}
+
+	.delantera .logo-marca {
+		text-align: right;
+		min-height: 50px;
+	}
+
+	.delantera .logo-marca img {
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+		max-width: 80px;
+	}
+
+	.delantera .chip {
+		width: 100%;
+		max-width: 50px;
+		margin-bottom: 20px;
+	}
+
+	.delantera .grupo .label {
+		font-size: 16px;
+		color: #7d8994;
+		margin-bottom: 5px;
+	}
+
+	.delantera .grupo .numero,
+	.delantera .grupo .nombre,
+	.delantera .grupo .expiracion {
+		color: #fff;
+		font-size: 22px;
+		text-transform: uppercase;
+	}
+
+	.delantera .flexbox {
+		display: flex;
+		justify-content: space-between;
+		margin-top: 20px;
+	}
+
+	/* ---------- Tarjeta Trasera ----------*/
+	.trasera {
+		background: url(../img/bg-tarjeta/bg-tarjeta-02.jpg);
+		background-size: cover;
+		position: absolute;
+		top: 0;
+		transform: rotateY(180deg);
+		backface-visibility: hidden;
+	}
+
+	.trasera .barra-magnetica {
+		height: 40px;
+		background: #000;
+		width: 100%;
+		position: absolute;
+		top: 30px;
+		left: 0;
+	}
+
+	.trasera .datos {
+		margin-top: 60px;
+		display: flex;
+		justify-content: space-between;
+	}
+
+	.trasera .datos p {
+		margin-bottom: 5px;
+	}
+
+	.trasera .datos #firma {
+		width: 70%;
+	}
+
+	.trasera .datos #firma .firma {
+		height: 40px;
+		background: repeating-linear-gradient(skyblue 0, skyblue 5px, orange 5px, orange 10px);
+	}
+
+	.trasera .datos #firma .firma p {
+		line-height: 40px;
+		font-family: 'Liu Jian Mao Cao', cursive;
+		color: #000;
+		font-size: 30px;
+		padding: 0 10px;
+		text-transform: capitalize;
+	}
+
+	.trasera .datos #ccv {
+		width: 20%;
+	}
+
+	.trasera .datos #ccv .ccv {
+		background: #fff;
+		height: 40px;
+		color: #000;
+		padding: 10px;
+		text-align: center;
+	}
+
+	.trasera .leyenda {
+		font-size: 14px;
+		line-height: 24px;
+	}
+
+	.trasera .link-banco {
+		font-size: 14px;
+		color: #fff;
+	}
+
+
+
+
+
+
+
+
+
+
+
+
+	.formulario-tarjeta {
+		background: #fff;
+		width: 100%;
+		max-width: 700px;
+		padding: 150px 30px 30px 30px;
+		border-radius: 10px;
+		position: relative;
+		left: -18px;
+		top: -150px;
+		z-index: 1;
+		clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+		transition: clip-path .3s ease-out;
+	}
+
 
 	.contenedor-btn .btn-abrir-formulario {
 		width: 50px;
@@ -421,20 +554,6 @@
 		transition: all .2s ease;
 		border: none;
 		cursor: pointer;
-	}
-
-	.formulario-tarjeta {
-		background: #fff;
-		width: 100%;
-		max-width: 700px;
-		padding: 150px 30px 30px 30px;
-		border-radius: 10px;
-		position: relative;
-		left: -18px;
-		top: -150px;
-		z-index: 1;
-		clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
-		transition: clip-path .3s ease-out;
 	}
 	
 }
