Mejorar la posición de la imagen del card de CERTIFICADOS de la página principal. En esta misma página, cambiar MIS CURSOS por CURSOS COMPRADOS, de igual manera en la sección de cursos comprados. En la sección de cursos publicados, cambiar CURSOS DESTACADOS por CURSOS PUBLICADOS MÁS DESTACADOS y CURSOS por CURSOS PUBLICADOS. En esta última página, aplicarle border-radius al contenedor de los títulos, Jesus Cacha

--- a/web/assets/css/home.css
+++ b/web/assets/css/home.css
@@ -348,6 +348,13 @@
     transition: width 1s ease;
 }
 
+/*Ponemos el nombre de esta clase sola para que funciones, pues detrás hay estilos de Bootstrap.*/
+/*.container-fluid-brida .row .col-12 .card-image .certificados-> De esta manera NO.*/
+.certificados {
+    position: relative;
+    left: -11px;
+}
+
 .container-fluid-brida .row .col-12 .card-title {
     font-family: "Poppins", sans-serif;
     font-size: 18px;
