--- a/web/assets/css/style1.css
+++ b/web/assets/css/style1.css
@@ -146,8 +146,6 @@ a {
     color: var(--title-color);
     cursor: pointer;
 }
-
-
 /*========== nav-dashboard==========*/
 
 .nav-dashboard {
@@ -361,9 +359,16 @@ a {
     .header__img__side {
         width: 10%;
     }
+
+    /*Mantener siempre centrado la imagen del header.*/
     .header__logo {
-        display: block;
+        
+        display:block;
+        margin:auto;
     }
+
+
+
     .header__img {
         width: 40px;
         height: 40px;
