--- a/web/assets/css/cursos.css
+++ b/web/assets/css/cursos.css
@@ -226,7 +226,7 @@ border-radius: 10px;
 }
 */
 
-/* BUTTON SEARCH */
+/* BUSCADOR */
 
 .container .input {
     border: 1px solid #d5d7da;
@@ -442,6 +442,7 @@ border-radius: 10px;
     -webkit-line-clamp: 2; */
 }
 
+/*
 .container-fluid
     .container-card-course
     .row
@@ -455,7 +456,9 @@ border-radius: 10px;
     font-weight: bold;
     padding: 0.5rem;
 }
+*/
 
+/*
 .container-fluid
     .container-card-course
     .row
@@ -466,6 +469,33 @@ border-radius: 10px;
     color: dimgray;
     margin-bottom: 1rem;
     text-decoration: none;
+}
+**/
+
+.card:hover{
+	box-shadow: 5px 5px 20px rgba(0,0,0,0.4);
+	transform: translateY(-3%);
+}
+
+.container-card-link{
+
+    text-align: center;
+}
+
+.card .container-card-link a{
+	display: inline-block;
+	padding: 10px;
+	margin-top: 10px;
+	text-decoration: none;
+	color: #2fb4cc;
+	border: 1px solid #2fb4cc;
+	border-radius: 4px;
+	transition: all 400ms ease;
+	margin-bottom: 5px;
+}
+.card .container-card-link a:hover{
+	background: #2fb4cc;
+	color: #fff;
 }
 
 /*fin de cartillas*/
