--- a/web/assets/css/cursos.css
+++ b/web/assets/css/cursos.css
@@ -260,7 +260,7 @@ border-radius: 10px;
     position: absolute;
     top: 0;
     right: 0;
-    width: 50px;
+    width: 0.5%;
     height: 100%;
     background: #99ccff;
     z-index: 1;
