--- a/web/assets/css/cursos.css
+++ b/web/assets/css/cursos.css
@@ -480,6 +480,7 @@ border-radius: 10px;
 .container-card-link{
 
     text-align: center;
+    float: left;
 }
 
 .card .container-card-link a{
@@ -487,15 +488,15 @@ border-radius: 10px;
 	padding: 10px;
 	margin-top: 10px;
 	text-decoration: none;
-	color: #2fb4cc;
-	border: 1px solid #2fb4cc;
-	border-radius: 4px;
+	color: #e7e7e7;
+	background-color:#168eb3;
+	border-radius: 50px;
 	transition: all 400ms ease;
 	margin-bottom: 5px;
+    width: 150px;
 }
 .card .container-card-link a:hover{
-	background: #2fb4cc;
-	color: #fff;
+	background-color:#127b9b;
 }
 
 /*fin de cartillas*/
