--- a/web/assets/css/home.css
+++ b/web/assets/css/home.css
@@ -1077,7 +1077,6 @@
     .container-bussines {
         display: grid;
         grid-template-columns: 50% 50%;
-        position: relative;
     }
     .container-bussines>.send-data .back .formu .row {
         display: grid;
@@ -1129,4 +1128,39 @@
         left: -9px;
     }
 }
+
+
+
+
+
+
+@media screen and (max-width: 768px) {
+    .container-bussines>.send-data .back {
+        width: 100%;
+        height: 100%;
+        top: -260px;
+        left: 0;
+        position: relative;
+        backface-visibility: hidden;
+        -webkit-backface-visibility: hidden;
+        -moz-backface-visibility: hidden;
+        -o-backface-visibility: hidden;
+        -ms-backface-visibility: hidden;
+        transform: rotateY(180deg);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: #fff;
+    }
+
+    .container-bussines {
+     
+        position: relative;
+        top: -80px !important;
+    }
+}
+
+
+
 
