--- a/web/assets/css/footer.css
+++ b/web/assets/css/footer.css
@@ -108,9 +108,7 @@ footer a:hover {
     border-radius: 100%;
     background-color: #7C83FD;
   }
-  .copyright-text {
-    margin: 0;
-  }
+  
   @media (max-width: 991px) {
     .site-footer [class^="col-"] {
       margin-bottom: 30px;
@@ -123,6 +121,11 @@ footer a:hover {
     .site-footer .copyright-text,
     .site-footer .social-icons {
       text-align: center;
+    }
+  }
+  @media (min-width: 1200px) {
+    .social-icons {
+      padding-right: 50px;
     }
   }
   .social-icons {
@@ -171,7 +174,24 @@ footer a:hover {
     background-color: #00bb2d;
   }
   .social-icons a.youtube:hover {
-    background-color: red
-    ;
+    background-color: red;
   }
+  
+  .site-footer .row {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: auto;
+  }
+
+  .enviar_inicio {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: auto;
+    text-align: center; 
+    width: 50px;
+    height: 50px;
+  }
+
   
