--- a/web/assets/css/footer.css
+++ b/web/assets/css/footer.css
@@ -1,5 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 
+@media (min-width: 1000px) {
+
+  .footer--light {
+
+    margin-top: 100px;
+  
+  }
+
+
+}
+
 footer ul {
   padding: 0;
   margin: 0;
@@ -27,7 +38,7 @@ footer a:hover {
   color: #7c83fd;
 }
 .footer-menu ul li a {
-  font-size: 18px;
+  font-size: 16px;
   line-height: 32px;
   -webkit-transition: 0.3s;
   -o-transition: 0.3s;
@@ -123,11 +134,39 @@ footer a:hover {
       text-align: center;
     }
   }
+
+
+
+
+
+
+
+
   @media (min-width: 1200px) {
+
+
+
+
     .social-icons {
       padding-right: 50px;
     }
+
+
+
+    .footer-widget .footer-menu {
+      
+      float: right;
+      margin: 0;
+    }
+
+
   }
+
+
+
+
+
+
   .social-icons {
     padding-left: 0;
     margin-bottom: 0;
@@ -190,8 +229,6 @@ footer a:hover {
     align-items: center;
     margin: auto;
     text-align: center; 
-    width: 50px;
+    width: 40px;
     height: 50px;
   }
-
-  
