--- a/web/assets/css/header.css
+++ b/web/assets/css/header.css
@@ -495,3 +495,14 @@ header.scrolled {
   background-color: rgba(255, 255, 255, 0.904);
   transition: background-color 500ms linear;
 }
+
+ 
+@media screen and (min-width: 1000px) {
+
+  .logo-container {
+
+    margin-left: -120px;
+    margin-right: 390px;    
+  }
+
+}
