Arreglar algunos diseños, Jesus Cacha

--- a/web/assets/css/footer.css
+++ b/web/assets/css/footer.css
@@ -159,11 +159,15 @@ footer a:hover {
       margin: 0;
     }
 
+    /*Mover el logo del footer.*/
+    .footer-widget .widget-about .img-fluid {
+
+      margin-left: 80px;
+      
+    }
+
 
   }
-
-
-
 
 
 
