Centrar boton lista de cursos

--- a/web/assets/css/cursos.css
+++ b/web/assets/css/cursos.css
@@ -478,9 +478,8 @@ border-radius: 10px;
 }
 
 .container-card-link{
-
     text-align: center;
-    float: left;
+    /*float: left;*/
 }
 
 .card .container-card-link a{
