en el footer agregue iconos respecto a lo que muestran como: QUIENES SOMOS   BLOGS  CONTACTANOS Y LOS QUE SIGUIENTE   en la lista de cursos cambie el fondo   ahora es blanco, Cinthia

--- a/web/assets/css/cursos.css
+++ b/web/assets/css/cursos.css
@@ -1,4 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500&display=swap");
+
+body {
+    background-color: #fff;
+}
+
 .container-fluid .row .col-12 .section-title-course {
     font-family: "Inter", sans-serif;
     font-style: normal;
