--- a/web/assets/css/styledash.css
+++ b/web/assets/css/styledash.css
@@ -44,6 +44,7 @@
         border: 0;
         box-shadow: none;
         padding-top: 1.5rem;
+        background-color: transparent;
     }
     
     .card.t-categ {
@@ -58,15 +59,19 @@
     }
     
     .card-title {
-        text-align: left;
-        font-size: 20px;
+        /* text-align: left; */
+        font-size: 30px;
         letter-spacing: -0.02em;
-        color: #56A4D0;
+        color: #fff;
         padding-bottom: .5rem;
+        background: rgb(124,131,253);
+        background: linear-gradient(50deg, rgba(124,131,253,1) 0%, rgba(224,199,229,0.6054796918767507) 100%);
+        border-radius: 10px;
+        padding: 10px;
     }
     
     .card-body {
-        border: 1px solid #56A4D0;
+        /* border: 1px solid #56A4D0; */
         border-radius: 5px;
         font-size: 14px;
     }
