--- a/web/assets/css/styledash.css
+++ b/web/assets/css/styledash.css
@@ -43,7 +43,7 @@
     .card {
         border: 0;
         box-shadow: none;
-        padding-top: 1.5rem;
+        padding-top: 0.5rem;
         background-color: transparent;
     }
     
@@ -60,14 +60,14 @@
     
     .card-title {
         /* text-align: left; */
-        font-size: 24px;
-        letter-spacing: -0.02em;
+        font-size: 23px;
+        /* letter-spacing: -0.02em; */
         color: #fff;
         padding-bottom: .5rem;
         background: rgb(124,131,253);
         background: linear-gradient(50deg, rgba(124,131,253,1) 0%, rgba(224,199,229,0.6054796918767507) 100%);
         border-radius: 10px;
-        padding: 9px;
+        padding: 7px;
         height: 58px;
         margin-left: 26px;
         margin-right: 19px;
