--- a/web/assets/css/contenidocurso.css
+++ b/web/assets/css/contenidocurso.css
@@ -32,7 +32,8 @@ body {
 }
 
 .container-curso .container-info-course-curso .container-detalle-course .rankin-course {
-    color: #fcd43c;
+    color: #666efd;
+    font-weight: 600;
 }
 
 .container-curso .container-info-course-curso .container-detalle-course .description-course {
@@ -64,7 +65,7 @@ body {
 /*  */
 
 .container-curso .container-info-course-curso .container-detalle-course .start-course .container-start-course {
-    background: #b3d6f7;
+    background: linear-gradient(to right, #7C83FD, #E0C7E5) !important;
     border-radius: 0.3rem;
     align-items: center;
     vertical-align: middle;
@@ -74,18 +75,18 @@ body {
 .container-curso .container-info-course-curso .container-detalle-course .start-course .container-start-course h5 {
     font-size: 13px;
     font-weight: normal;
-    color: #597c9b;
+    color: #fff;
 }
 
 .container-curso .container-info-course-curso .container-detalle-course .start-course .container-start-course button {
-    font-size: 14px;
-    background: #eaf3fd;
+    font-size: 13px;
+    background: #7C83FD;
     border-radius: 0.3rem;
     line-height: 1rem;
-    color: #7c9fbf;
+    color: #fff;
     text-transform: uppercase;
     width: 100%;
-    font-weight: bold;
+    /* font-weight: bold; */
 }
 
 .container-curso .container-info-course-curso .container-detalle-course .start-course .container-start-course .container-button {
@@ -129,7 +130,7 @@ body {
 
 .container-curso .container-other-course-curso .row {
     text-align: center;
-    color: #597c9b;
+    color: #7C83FD;
     text-transform: uppercase;
     font-weight: bold;
 }
@@ -142,14 +143,14 @@ body {
 .container-curso .container-other-course-curso .row h5 {
     font-size: 12px;
     text-align: center;
-    /* color: #dce2ff; */
+    color: #000; 
     text-transform: capitalize;
     font-weight: normal;
     padding-top: 0.5rem;
 }
 
 .container-fluid {
-    background: #d5e7fb;
+    background: #e0c7e5;
 }
 
 .container-fluid .container-links-course-curso {
@@ -171,7 +172,8 @@ body {
 
 .container-fluid .container-links-course-curso .nav-link-course a {
     text-decoration: none;
-    color: #597c9b;
+    color: #000;
+    font-weight: 500;
 }
 
 .container-fluid .container-detalle-informacion {
