Cambios en el sidebar, Jesus Cacha

--- a/web/assets/css/style1.css
+++ b/web/assets/css/style1.css
@@ -9,7 +9,7 @@
     --header-height: 3.5rem;
     --nav-width: 219px;
     /*========== Colors ==========*/
-    --first-color: #6923D0;
+  
     --first-color-light: #F4F0FA;
     --title-color: #19181B;
     --text-color: #58555E;
@@ -48,10 +48,10 @@ body {
     margin: var(--header-height) 0 0 0;
     padding: 1rem 1rem 0;
     /* font-family: var(--body-font); */
-    font-size: var(--normal-font-size);
+
     background: #f7f7f7;
     color: var(--text-color);
-    font-family: 'Baloo Tamma 2', cursive;
+ 
     
 }
 
@@ -292,8 +292,8 @@ a {
 }
 
 .nav__dropdown-item-dashboard:hover {
-    color: var(--title-color);
-    background-color: #58555e64;
+    color: black;
+    /*background-color: #58555e64;*/
 }
 
 .nav__dropdown-icon-dashboard {
