--- a/web/assets/css/styledetcurso.css
+++ b/web/assets/css/styledetcurso.css
@@ -13,7 +13,7 @@
 }
 .row {
   margin: 0 auto;
-  max-width: 1600px;
+  /* max-width: 1600px; */
 }
 .bg-dark1 .row .col-xl-4 .card .card-body .btn-outline-dark {
   width: 100%;
