--- a/web/assets/css/styledetcurso.css
+++ b/web/assets/css/styledetcurso.css
@@ -44,7 +44,7 @@
 
 .bg-dark11 .row .info-course-right .card {
   position: absolute;
-  width: 90%;
+  width: 100%;
 }
 .content-img {
   width: 100%;
@@ -57,6 +57,8 @@
 }
 .card-img-top1 {
   height: 100%;
+  width: 100%;
+  border-radius: 17px;
 }
 .btn-outline-dark {
   width: 100%;
