--- a/web/assets/css/styledash.css
+++ b/web/assets/css/styledash.css
@@ -75,6 +75,7 @@
         /* align-items: center; */
         justify-content: center;
         align-items: flex-end;
+        font-weight: 700;
     }
     
     .card-body {
